# sticker-detection-uncertainty-quantification

./: .gitattributes  .gitignore  README.MD  README.md  calibration.json  dataset_def_pl.py  detection_offline.py  detection_offline_cosine_similarity.py  detection_offline_dbscan.py  environment.yaml  environment.yml  model_def_pl.py  outpout.json  pyproject.toml  requirements.txt  test.py  tkinter_gui.py  tkinter_offline.py  utils.py
.github/workflows/: test.yml
checkpoints/retinanet_resnet50_fpn_v2_aug/version_0/: events.out.tfevents.1683542078.LAPTOP-U1PGR6QN.34608.0  hparams.yaml
data/: merge.py
data/test/: annotations.coco.json
data/val/: annotations.coco.json
data/valid/: annotations.coco.json
image-generation/: dall.py  gpt-4o.py  i-to-i.py  image_generator.py  stable-diffussion.py
image_labeled/: avg.py  output_12_resized.json  output_1715173342.0150769.json  output_1715323558.json  output_1715523819.json  output_1716323208.json  output_1716486061.json  output_1716904279.json  output_1717006355.json  output_brightened_image_open43.json  output_darkened_image_open43.json  output_flipped_image_open43.json  output_image_open43.json  output_image_top54.json  output_noisy_image_open43.json  output_z_top.json  resize_image.py
noise_gneration/: __init__.py  g_noise.py  stable_difussion.py
src/deepluq/: __init__.py
src/deepluq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/deepluq/cli/: main.py
src/deepluq/image_generation/: __init__.py  dall.py  gpt_4o.py  i_to_i.py  image_generator.py  stable_diffusion.py
src/deepluq/image_labeled/: __init__.py  avg.py  resize_image.py
src/deepluq/uq/: __init__.py  metrics.py  utils.py
test_images/: __init__.py  resize_image.py
tests/: __init__.py  test_iou.py
tests/deepluq/uq/: __init__.py  test_metrics.py
uq/: metrics.py  utils.py
utils/: __init__.py  run_cluster.py  tkinter_gui.py  tkinter_offline.py  util_funs.py
vision/torchvision/models/: _utils.py  resnet.py  vgg.py
vision/torchvision/models/detection/: backbone_utils.py  faster_rcnn.py  retinanet.py  roi_heads.py  rpn.py  ssd.py  ssdlite.py
vision/torchvision/ops/: feature_pyramid_network.py
