[build-system]
requires = ["setuptools >= 61.0.0",
    "wheel",
    "build",
    "sphinx"]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "deepluq"
version = "0.1"
description = "Package to quantify uncertainty in deep learning models"
license = { file="LICENSE" }
readme = "README.md"
keywords = ["deep learning", "uncertainty quantification", "machine learning"]
authors = [
    { name = "Chengjie Lu", email = "chengjielu@simula.no" },
]
requires-python = ">=3.8"

maintainers = [
    { name = "Chengjie Lu", email = "chengjielu@simula.no" },
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Lanugage :: Python :: 3.8",
    "License :: OSI Approved :: BSD License", # check later
]

dependencies = [
    "pypylon",
    "opencv-python",
    "numpy",
    "tqdm",
    "torchmetrics",
    "pytorch-lightning",
    "pycocotools",
    "ImageHash",
    "onnx",
    "onnxruntime",
    "psutil",
    "torch~=2.1.2",
    "torchvision~=0.18.0a0",
    "pillow",
    "scipy",
    "requests",
    "matplotlib",
    "aiohttp",
    "setuptools",
    "scikit-learn",
    "pytest",
    "pandas"
]

[project.urls]
homepage = "https://github.com/chengjie-lu/deepluq"
documentation = "https://github.com/chengjie-lu/deepluq"
repository = "https://github.com/chengjie-lu/deepluq"

#[project.entry-points]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pydot"
]

[project.scripts]
deepluq = "deepluq.cli.main:run"

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # (invalid-name)
    #    "C0114", # (missing-module-docstring)
    #    "C0115", # (missing-class-docstring)
    #    "C0116", # (missing-function-docstring)
    #    "R0903", # (too-few-public-methods)
    #    "R0913", # (too-many-arguments)
    #    "W0105", # (pointless-string-statement)
]

[tool.isort]
multi_line_output = 8